--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+*.iml
+.gradle
+/local.properties
+/.idea/caches
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
+
+.idea/.gitignore
+.idea/compiler.xml
+.idea/deploymentTargetDropDown.xml
+.idea/misc.xml
+.idea/*
 # Built application files
 *.apk
 *.aar
